// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu should render examples 1`] = `
"<div>
  <div>
    <div class=\\"c-menu c-menu--left\\">
      <button role=\\"button\\" class=\\"c-btn c-menu__btn\\">Click me !</button>
    </div>
  </div>
</div>"
`;

exports[`Menu should render examples 2`] = `
"<div>
  <div>
    <div class=\\"c-menu c-menu--right\\">
      <button role=\\"button\\" class=\\"c-btn c-menu__btn\\">Click me !</button>
    </div>
  </div>
</div>"
`;

exports[`Menu should render examples 3`] = `
"<div>
  <div>
    <div class=\\"c-menu c-menu--left\\">
      <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn\\"><span><!-- react-text: 4 -->Greetings with custom component<!-- /react-text --></span></button>
    </div>
  </div>
</div>"
`;
